# robot-task-distributor

./: Dockerfile  README.md  docker-compose.yml  test_docker.sh
scripts/: build.sh  clean.sh  run_edge.sh  run_robot.sh  run_test.sh
src/decision_maker/: CMakeLists.txt  package.xml
src/decision_maker/include/decision_maker/: parameter_estimator.hpp
src/decision_maker/src/: decision_maker_node.cpp  parameter_estimator.cpp
src/edge_client/: CMakeLists.txt  package.xml
src/edge_client/include/edge_client/: .gitkeep
src/edge_client/src/: edge_connection_tester.cpp
src/edge_server/: CMakeLists.txt  package.xml
src/edge_server/include/edge_server/: edge_computation_modules.hpp  task_scheduler.hpp
src/edge_server/launch/: edge_station.launch.py
src/edge_server/src/: edge_computation_modules.cpp  edge_server_node.cpp  station_monitor_node.cpp  task_scheduler.cpp
src/network_monitor/: CMakeLists.txt  package.xml
src/network_monitor/include/network_monitor/: network_monitor.hpp
src/network_monitor/src/: network_monitor.cpp  network_monitor_node.cpp
src/system_monitor/: CMakeLists.txt  package.xml
src/system_monitor/include/system_monitor/: system_monitor.hpp
src/system_monitor/src/: system_monitor.cpp  system_monitor_node.cpp
src/task_executor/: CMakeLists.txt  package.xml
src/task_executor/include/task_executor/: computation_modules.hpp
src/task_executor/launch/: test_generator.launch.py
src/task_executor/src/: computation_modules.cpp  task_executor_node.cpp
src/task_executor/test/: task_generator_node.cpp
src/task_offloading_core/: CMakeLists.txt  package.xml
src/task_offloading_core/include/task_offloading_core/: decision_model.hpp  models.hpp
src/task_offloading_core/launch/: full_system.launch.py  robot_nodes.launch.py
src/task_offloading_core/src/: decision_model.cpp  models.cpp
src/task_offloading_interfaces/: CMakeLists.txt  package.xml
src/task_offloading_interfaces/msg/: EdgeStationStatus.msg  ExecutionMetrics.msg  NetworkState.msg  SystemState.msg  TaskParameters.msg
src/task_offloading_interfaces/srv/: DecideOffloading.srv  EstimateParameters.srv  ExecuteTask.srv  RecordExecution.srv
